[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["update lib version"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
pydantic = {extras = ["email"], version = "^1.8.2"}
asyncpg = "^0.24.0"
databases = "^0.5.3"
loguru = "^0.5.3"
bcrypt = "^3.2.0"
passlib = "^1.7.4"
SQLAlchemy = "^1.4.26"
psycopg2-binary = "^2.9.1"
aiosql = "^3.3.1"
PyPika = "^0.48.8"
python-dotenv = "^0.19.1"
google-cloud-storage = "^2.2.1"
python-multipart = "^0.0.5"
PyJWT = "^2.3.0"
googlemaps = "^4.6.0"

[tool.poetry.dev-dependencies]
alembic = "^1.7.4"
black = "^21.9b0"
isort = "^5.9.3"
autoflake = "^1.4"
pytest = "^6.2.5"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
